--- a/Neos.Media.Browser/Resources/Private/Translations/en/Main.xlf
+++ b/Neos.Media.Browser/Resources/Private/Translations/en/Main.xlf
@@ -385,6 +385,12 @@
 			<trans-unit id="resourceCanOnlyBeReplacedBySimilarResource" xml:space="preserve">
 				<source>'Resources of type "{0}" can only be replaced by a similar resource. Got type "{1}"'</source>
 			</trans-unit>
+			<trans-unit id="noAccessToWorkspace" xml:space="preserve">
+				<source>No access to workspace "{0}"</source>
+			</trans-unit>
+			<trans-unit id="missingDocumentNode" xml:space="preserve">
+				<source>No document node found for this node</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
