--- a/Neos.Media.Browser/Resources/Private/Translations/es/Main.xlf
+++ b/Neos.Media.Browser/Resources/Private/Translations/es/Main.xlf
@@ -56,18 +56,15 @@
       <trans-unit id="sortDirection.desc" xml:space="preserve">
 				<source>Descending</source>
 			<target xml:lang="es-ES" state="translated">Descendete</target></trans-unit>
-      <trans-unit id="sortDirection.asc.tooltip" xml:space="preserve">
-				<source>Sort direction Ascending</source>
-			<target xml:lang="es-ES" state="needs-translation">Sort direction Ascending</target></trans-unit>
-      <trans-unit id="sortDirection.desc.tooltip" xml:space="preserve">
-				<source>Sort direction Descending</source>
-			<target xml:lang="es-ES" state="needs-translation">Sort direction Descending</target></trans-unit>
       <trans-unit id="dragAndDropOnTagOrCollection" xml:space="preserve">
 				<source>Drag and drop on tag or collection</source>
 			<target xml:lang="es-ES" state="translated">Arrastrar y soltar en la etiqueta o colección</target></trans-unit>
       <trans-unit id="editAsset" xml:space="preserve">
 				<source>Edit asset</source>
 			<target xml:lang="es-ES" state="translated">Editar activos</target></trans-unit>
+      <trans-unit id="replaceAssetResource" xml:space="preserve">
+				<source>Replace</source>
+			<target xml:lang="es-ES" state="translated">Reemplazar</target></trans-unit>
       <trans-unit id="deleteAsset" xml:space="preserve">
 				<source>Delete asset</source>
 			<target xml:lang="es-ES" state="translated">Eliminar activos</target></trans-unit>
@@ -95,12 +92,6 @@
       <trans-unit id="cancel" xml:space="preserve">
 				<source>Cancel</source>
 			<target xml:lang="es-ES" state="translated">Cancelar</target></trans-unit>
-      <trans-unit id="replace" xml:space="preserve">
-				<source>Replace</source>
-			<target xml:lang="es-ES" state="translated">Reemplazar</target></trans-unit>
-      <trans-unit id="replaceAssetResource" xml:space="preserve">
-				<source>Replace asset resource</source>
-			<target xml:lang="es-ES" state="needs-translation">Replace asset resource</target></trans-unit>
       <trans-unit id="saveEditing" xml:space="preserve">
 				<source>Save</source>
 			<target xml:lang="es-ES" state="translated">Guardar</target></trans-unit>
@@ -278,9 +269,6 @@
       <trans-unit id="cannotUploadFile" xml:space="preserve">
 				<source>Cannot upload the file</source>
 			<target xml:lang="es-ES" state="translated">No se puede cargar el archivo</target></trans-unit>
-      <trans-unit id="noFileSelected" xml:space="preserve">
-				<source>No file selected</source>
-			<target xml:lang="es-ES" state="translated">Ningún archivo seleccionado</target></trans-unit>
       <trans-unit id="fileSizeExceedsAllowedLimit" xml:space="preserve">
 				<source>The file size of {0} exceeds the allowed limit of {1}</source>
 			<target xml:lang="es-ES" state="translated">El tamaño del archivo de {0} supera el límite permitido de {1}</target></trans-unit>
@@ -317,31 +305,31 @@
 			<target xml:lang="es-ES" state="needs-translation">References to "{asset}"</target></trans-unit>
       <trans-unit id="replaceAsset.replaceFilename" xml:space="preserve">
 				<source>Replace "{filename}"</source>
-			<target xml:lang="es-ES" state="translated">Reemplazar "{filename}"</target></trans-unit>
+			<target xml:lang="es-ES" state="needs-translation">Replace "{filename}"</target></trans-unit>
       <trans-unit id="replaceAsset.description" xml:space="preserve">
-				<source>You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</source>
-			<target xml:lang="es-ES" state="needs-translation">You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</target></trans-unit>
+        <source>You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</source>
+      <target xml:lang="es-ES" state="needs-translation">You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</target></trans-unit>
       <trans-unit id="replaceAsset.note" xml:space="preserve">
-				<source>Note</source>
-			<target xml:lang="es-ES" state="translated">Nota</target></trans-unit>
+        <source>Note</source>
+      <target xml:lang="es-ES" state="needs-translation">Note</target></trans-unit>
       <trans-unit id="replaceAsset.noteText" xml:space="preserve">
-				<source>This operation will replace the asset in all published or unpublished workspaces, including the live website.</source>
-			<target xml:lang="es-ES" state="needs-translation">This operation will replace the asset in all published or unpublished workspaces, including the live website.</target></trans-unit>
+        <source>This operation will replace the asset in all published or unpublished workspaces, including the live website.</source>
+      <target xml:lang="es-ES" state="needs-translation">This operation will replace the asset in all published or unpublished workspaces, including the live website.</target></trans-unit>
       <trans-unit id="replaceAsset.chooseNewFile" xml:space="preserve">
-				<source>Choose a new file</source>
-			<target xml:lang="es-ES" state="translated">Seleccione un nuevo archivo</target></trans-unit>
+        <source>Choose a new file</source>
+      <target xml:lang="es-ES" state="needs-translation">Choose a new file</target></trans-unit>
       <trans-unit id="replace.usageCount" xml:space="preserve">
-				<source>Currently the asset is used {usageCount} times.</source>
-			<target xml:lang="es-ES" state="needs-translation">Currently the asset is used {usageCount} times.</target></trans-unit>
+        <source>Currently the asset is used {usageCount} times.</source>
+      <target xml:lang="es-ES" state="needs-translation">Currently the asset is used {usageCount} times.</target></trans-unit>
       <trans-unit id="replace.allUsages" xml:space="preserve">
-				<source>Show all usages</source>
-			<target xml:lang="es-ES" state="translated">Mostrar todos los usos</target></trans-unit>
+        <source>Show all usages</source>
+      <target xml:lang="es-ES" state="needs-translation">Show all usages</target></trans-unit>
       <trans-unit id="replace.notUsed" xml:space="preserve">
-				<source>Currently the asset is not in used anywhere on the website.</source>
-			<target xml:lang="es-ES" state="needs-translation">Currently the asset is not in used anywhere on the website.</target></trans-unit>
+        <source>Currently the asset is not in used anywhere on the website.</source>
+      <target xml:lang="es-ES" state="needs-translation">Currently the asset is not in used anywhere on the website.</target></trans-unit>
       <trans-unit id="replace.previewFile" xml:space="preserve">
-				<source>Preview current file</source>
-			<target xml:lang="es-ES" state="translated">Vista previa del archivo actual</target></trans-unit>
+        <source>Preview current file</source>
+      <target xml:lang="es-ES" state="needs-translation">Preview current file</target></trans-unit>
       <trans-unit id="couldNotReplaceAsset" xml:space="preserve">
 				<source>Could not replace asset</source>
 			<target xml:lang="es-ES" state="translated">No se puede reemplazar el recurso</target></trans-unit>
@@ -381,18 +369,9 @@
       <trans-unit id="collectionHasBeenDeleted" xml:space="preserve">
 				<source>Collection "{0}" has been deleted.</source>
 			<target xml:lang="es-ES" state="translated">La colección "{0}" ha sido eliminada.</target><alt-trans><target xml:lang="es-ES">Colección {0} ha sido eliminada.</target></alt-trans></trans-unit>
-      <trans-unit id="replace.options.generateRedirects" xml:space="preserve">
+      <trans-unit id="media.replace.options.generateRedirects" xml:space="preserve">
 				<source>Generate redirects from original file url to the new url</source>
 			<target xml:lang="es-ES" state="translated">Generar redirecciones de la url del archivo original a la nueva url</target></trans-unit>
-      <trans-unit id="resourceCanOnlyBeReplacedBySimilarResource" xml:space="preserve">
-				<source>'Resources of type "{0}" can only be replaced by a similar resource. Got type "{1}"'</source>
-			<target xml:lang="es-ES" state="needs-translation">'Resources of type "{0}" can only be replaced by a similar resource. Got type "{1}"'</target></trans-unit>
-      <trans-unit id="noAccessToWorkspace" xml:space="preserve">
-				<source>No access to workspace "{0}"</source>
-			<target xml:lang="es-ES" state="needs-translation">No access to workspace "{0}"</target></trans-unit>
-      <trans-unit id="missingDocumentNode" xml:space="preserve">
-				<source>No document node found for this node</source>
-			<target xml:lang="es-ES" state="needs-translation">No document node found for this node</target></trans-unit>
     </body>
   </file>
 </xliff>
