--- a/Neos.Media.Browser/Resources/Private/Translations/lv/Main.xlf
+++ b/Neos.Media.Browser/Resources/Private/Translations/lv/Main.xlf
@@ -2,7 +2,7 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file original="" product-name="Neos.Media.Browser" source-language="en" datatype="plaintext" target-language="lv">
     <body>
-      <trans-unit id="dragHelp" xml:space="preserve">
+		<trans-unit id="dragHelp" xml:space="preserve">
 				<source>Drag and drop an asset on a collection / tag to add them to it.</source>
 			<target xml:lang="lv" state="translated">Velciet un ievietojiet elementu kolekcijā / izvēlieties tam tagu.</target></trans-unit>
       <trans-unit id="replace.options.keepOriginalFilename" xml:space="preserve">
@@ -56,18 +56,15 @@
       <trans-unit id="sortDirection.desc" xml:space="preserve" approved="yes">
 				<source>Descending</source>
 			<target xml:lang="lv">Dilstošā secībā</target></trans-unit>
-      <trans-unit id="sortDirection.asc.tooltip" xml:space="preserve">
-				<source>Sort direction Ascending</source>
-			<target xml:lang="lv" state="translated">Kārtot augošā secībā</target><alt-trans><target xml:lang="lv">Kārtošanas virziens augošā secībā</target></alt-trans></trans-unit>
-      <trans-unit id="sortDirection.desc.tooltip" xml:space="preserve">
-				<source>Sort direction Descending</source>
-			<target xml:lang="lv" state="translated">Kārtot dilstošā secībā</target><alt-trans><target xml:lang="lv">Kārtot dilstoša secībā</target></alt-trans></trans-unit>
       <trans-unit id="dragAndDropOnTagOrCollection" xml:space="preserve" approved="yes">
 				<source>Drag and drop on tag or collection</source>
 			<target xml:lang="lv">Pārvelciet uz tag vai kolekciju</target></trans-unit>
       <trans-unit id="editAsset" xml:space="preserve" approved="yes">
 				<source>Edit asset</source>
 			<target xml:lang="lv">Rediģētu aktīvu</target></trans-unit>
+      <trans-unit id="replaceAssetResource" xml:space="preserve">
+				<source>Replace</source>
+			<target xml:lang="lv" state="translated">Apmainīt</target></trans-unit>
       <trans-unit id="deleteAsset" xml:space="preserve" approved="yes">
 				<source>Delete asset</source>
 			<target xml:lang="lv">Dzēst aktīvu</target></trans-unit>
@@ -95,12 +92,6 @@
       <trans-unit id="cancel" xml:space="preserve" approved="yes">
 				<source>Cancel</source>
 			<target xml:lang="lv">Atcelt</target></trans-unit>
-      <trans-unit id="replace" xml:space="preserve">
-				<source>Replace</source>
-			<target xml:lang="lv" state="translated">Apmainīt</target></trans-unit>
-      <trans-unit id="replaceAssetResource" xml:space="preserve">
-				<source>Replace asset resource</source>
-			<target xml:lang="lv" state="translated">Apmainīt aktīvu</target><alt-trans><target xml:lang="lv">Mainīt aktīvu</target></alt-trans></trans-unit>
       <trans-unit id="saveEditing" xml:space="preserve" approved="yes">
 				<source>Save</source>
 			<target xml:lang="lv">Saglabāt</target></trans-unit>
@@ -278,9 +269,6 @@
       <trans-unit id="cannotUploadFile" xml:space="preserve" approved="yes">
 				<source>Cannot upload the file</source>
 			<target xml:lang="lv">Nevar augšupielādēt failu</target></trans-unit>
-      <trans-unit id="noFileSelected" xml:space="preserve">
-				<source>No file selected</source>
-			<target xml:lang="lv" state="translated">Nav izvēlēts fails</target></trans-unit>
       <trans-unit id="fileSizeExceedsAllowedLimit" xml:space="preserve" approved="yes">
 				<source>The file size of {0} exceeds the allowed limit of {1}</source>
 			<target xml:lang="lv">Faila lielums {0} pārsniedz pieļaujamo robežu {1}</target></trans-unit>
@@ -302,50 +290,50 @@
       <trans-unit id="deleteRelatedNodes" xml:space="preserve">
 				<source>Asset could not be deleted, because there are still Nodes using it</source>
 			<target xml:lang="lv" state="translated">Aktīvu nevar izdzēst, jo pastāv mezgli, kas to izmanto</target></trans-unit>
-      <group id="relatedNodes" restype="x-gettext-plurals">
-        <trans-unit id="relatedNodes[0]">
-          <source>{0} usages</source>
-          <target xml:lang="lv" state="translated">{0} lietojumi</target>
-        </trans-unit>
-        <trans-unit id="relatedNodes[1]">
-          <source>{0} usages</source>
-          <target xml:lang="lv" state="translated">{0} lietojums</target>
-        </trans-unit>
-        <trans-unit id="relatedNodes[2]">
-          <source>{0} usages</source>
-          <target xml:lang="lv" state="translated">{0} lietojumi</target>
-        </trans-unit>
-      </group>
-      <trans-unit id="relatedNodes.referencesTo" xml:space="preserve" approved="yes">
+		<group id="relatedNodes" restype="x-gettext-plurals">
+			<trans-unit id="relatedNodes[0]">
+				<source>{0} usages</source>
+				<target xml:lang="lv" state="translated">{0} lietojums</target>
+			</trans-unit>
+			<trans-unit id="relatedNodes[1]">
+				<source>{0} usages</source>
+				<target xml:lang="lv" state="translated">{0} lietojums</target>
+			</trans-unit>
+			<trans-unit id="relatedNodes[2]">
+				<source>{0} usages</source>
+				<target xml:lang="lv" state="needs-translation">{0} usages</target>
+			</trans-unit>
+		</group>
+		<trans-unit id="relatedNodes.referencesTo" xml:space="preserve" approved="yes">
 				<source>References to "{asset}"</source>
 			<target xml:lang="lv">Atsauces uz "{asset}"</target></trans-unit>
       <trans-unit id="replaceAsset.replaceFilename" xml:space="preserve">
 				<source>Replace "{filename}"</source>
-			<target xml:lang="lv" state="translated">Aizstāt "{filename}"</target></trans-unit>
+			<target xml:lang="lv" state="needs-translation">Replace "{filename}"</target></trans-unit>
       <trans-unit id="replaceAsset.description" xml:space="preserve">
-				<source>You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</source>
-			<target xml:lang="lv" state="translated">Jūs varat nomainīt šo aktīvu, augšupielādējot jaunu failu. Pēc tam jaunais aktīvs tiks izmantots visās vietās, kur tas bija lietots jūsu tīmekļa vietnē.</target></trans-unit>
+        <source>You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</source>
+      <target xml:lang="lv" state="needs-translation">You can replace this asset by uploading a new file. Once replaced, the new asset will be used on all places where the asset is used on your website.</target></trans-unit>
       <trans-unit id="replaceAsset.note" xml:space="preserve">
-				<source>Note</source>
-			<target xml:lang="lv" state="translated">Piezīme</target></trans-unit>
+        <source>Note</source>
+      <target xml:lang="lv" state="needs-translation">Note</target></trans-unit>
       <trans-unit id="replaceAsset.noteText" xml:space="preserve">
-				<source>This operation will replace the asset in all published or unpublished workspaces, including the live website.</source>
-			<target xml:lang="lv" state="translated">Šī darbība aizstās aktīvu visās publicētajās vai nepublicētajās darbvietās, ieskaitot tiešsaistes mājas lapā.</target></trans-unit>
+        <source>This operation will replace the asset in all published or unpublished workspaces, including the live website.</source>
+      <target xml:lang="lv" state="needs-translation">This operation will replace the asset in all published or unpublished workspaces, including the live website.</target></trans-unit>
       <trans-unit id="replaceAsset.chooseNewFile" xml:space="preserve">
-				<source>Choose a new file</source>
-			<target xml:lang="lv" state="translated">Izvēlēties jaunu failu</target></trans-unit>
+        <source>Choose a new file</source>
+      <target xml:lang="lv" state="needs-translation">Choose a new file</target></trans-unit>
       <trans-unit id="replace.usageCount" xml:space="preserve">
-				<source>Currently the asset is used {usageCount} times.</source>
-			<target xml:lang="lv" state="translated">Šobrīd aktīvs ir izmantots {usageCount} reizes.</target></trans-unit>
+        <source>Currently the asset is used {usageCount} times.</source>
+      <target xml:lang="lv" state="needs-translation">Currently the asset is used {usageCount} times.</target></trans-unit>
       <trans-unit id="replace.allUsages" xml:space="preserve">
-				<source>Show all usages</source>
-			<target xml:lang="lv" state="translated">Rādīt visus lietojumus</target></trans-unit>
+        <source>Show all usages</source>
+      <target xml:lang="lv" state="needs-translation">Show all usages</target></trans-unit>
       <trans-unit id="replace.notUsed" xml:space="preserve">
-				<source>Currently the asset is not in used anywhere on the website.</source>
-			<target xml:lang="lv" state="translated">Šis aktīvs nav izmantots mājas lapā.</target></trans-unit>
+        <source>Currently the asset is not in used anywhere on the website.</source>
+      <target xml:lang="lv" state="needs-translation">Currently the asset is not in used anywhere on the website.</target></trans-unit>
       <trans-unit id="replace.previewFile" xml:space="preserve">
-				<source>Preview current file</source>
-			<target xml:lang="lv" state="translated">Pašreizējā faila priekšskats</target></trans-unit>
+        <source>Preview current file</source>
+      <target xml:lang="lv" state="needs-translation">Preview current file</target></trans-unit>
       <trans-unit id="couldNotReplaceAsset" xml:space="preserve">
 				<source>Could not replace asset</source>
 			<target xml:lang="lv" state="translated">Nevar mainīt elementu</target></trans-unit>
@@ -388,15 +376,6 @@
       <trans-unit id="replace.options.generateRedirects" xml:space="preserve">
 				<source>Generate redirects from original file url to the new url</source>
 			<target xml:lang="lv" state="translated">Izveidot pāredresāciju no elementa oriģināla saites uz jaunu saiti</target></trans-unit>
-      <trans-unit id="resourceCanOnlyBeReplacedBySimilarResource" xml:space="preserve">
-				<source>'Resources of type "{0}" can only be replaced by a similar resource. Got type "{1}"'</source>
-			<target xml:lang="lv" state="translated">' "{0}" tipa resursu var aizstāt tikai ar līdzīgu resursu. Iegūt "{1}" tipu'</target></trans-unit>
-      <trans-unit id="noAccessToWorkspace" xml:space="preserve">
-				<source>No access to workspace "{0}"</source>
-			<target xml:lang="lv" state="translated">Nav piekļuves darba virsmai "{0}"</target><alt-trans><target xml:lang="lv">Nav piekļuves darba virsmā "{0}"</target></alt-trans></trans-unit>
-      <trans-unit id="missingDocumentNode" xml:space="preserve">
-				<source>No document node found for this node</source>
-			<target xml:lang="lv" state="translated">Nav atrasts dokumenta mezgls šim mezglam</target><alt-trans><target xml:lang="lv">Nav atrasta dokumenta mezgls šim mezglam</target></alt-trans></trans-unit>
     </body>
   </file>
 </xliff>
