FEATURE: Extend the asset model by a copyright notice
This extends the asset model by a copyrightNotice field.
This field is autmatically populated from the copyrightNotice IPTC
property when an ansset is imported from an asset source.

Resolves: #2064

--- a/Neos.Media.Browser/Resources/Private/Translations/en/Main.xlf
+++ b/Neos.Media.Browser/Resources/Private/Translations/en/Main.xlf
@@ -26,6 +26,9 @@
 			<trans-unit id="field.caption" xml:space="preserve">
 				<source>Caption</source>
 			</trans-unit>
+			<trans-unit id="field.copyrightnotice" xml:space="preserve">
+                <source>Copyright Notice</source>
+            </trans-unit>
 			<trans-unit id="field.lastModified" xml:space="preserve">
 				<source>Last modified</source>
 			</trans-unit>
